tedious styling in js

--- a/styles.css
+++ b/styles.css
@@ -37,21 +37,21 @@ a{
     min-height: 150px;
     min-width: 500px;
     flex-grow:4;
-    background-color: blue;  
+    /* background-color: blue;   */
 }
 
 .large-box{
     min-height: 500px;
     min-width: 410px;
     flex-grow:2;
-    background-color: green;  
+    /* background-color: green;   */
 }
 
 .small-box{
     min-height: 150px;
     min-width: 250px;
     flex-grow:1;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .pill{
