added finishing touches

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     font-family: "Poppins", sans-serif;
     color:rgb(38, 38, 38) ;
     font-weight: 200;
+    font-size: 25px
 }
 
 body{
@@ -332,4 +333,43 @@ transform: scale(0.95);
 
 .hidden-box .text-box {
     margin: 30px;
+}
+
+
+.pulse {
+    transform-origin: center;
+    animation: pulse 0.5s ease-in-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.95);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+iframe {
+    width: 100%;
+    min-height: 300px;
+}
+
+
+.hidden-box a,
+.hidden-box p {
+    font-size: 18px;
+}
+
+.hidden-box a {
+    color: red;
+}
+
+.hidden-pill a {
+    margin: 0 150px 0 0;
+
 }
